[package]
name = "pie-worker"
version = "0.4.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Standalone Pie server (no Python). Embeds a native driver in-process."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

# Library half — the engine boot path (serve::start_engine, config types,
# the supervisors). The `pie` CLI binary below is one consumer; the
# `pie-server` Python wheel under `sdk/python-server/` is another.
[lib]
name = "pie_worker"
path = "src/lib.rs"
crate-type = ["rlib"]

# Binary half — the `pie` CLI. Parses argv via clap and dispatches into
# the lib.
[features]
# Default = no embedded backend feature; the always-linked dummy driver is
# selected at runtime. Enable `driver-cuda` (Linux/NVIDIA) or `driver-metal`
# (macOS) for real inference. `driver-dummy` is
# kept as a compatibility no-op for older build commands; the dummy
# Rust driver is no longer gated.
default = []
driver-cuda = ["pie-engine/driver-cuda"]
driver-metal = ["pie-engine/driver-metal"]
driver-dummy = []

# Per-domain probe passthroughs. Each forwards to the runtime crate's
# corresponding flag. See `runtime/engine/src/scheduler/probe.rs` for the
# catalog of domains.
profile-fire = ["pie-engine/profile-fire"]
profile-hot-path = ["pie-engine/profile-hot-path"]
profile-all = ["pie-engine/profile-all"]

[dependencies]
# `pie` is the runtime crate. After Phase 8 deleted the legacy
# `pie._runtime` maturin module, runtime has no `python` feature to
# disable — pyo3 only lives in `driver/bridge_py/` (the Rust extension
# bundled into the `pie-driver-bridge` wheel via maturin), not in the
# runtime crate itself.
pie-engine = { path = "../runtime/engine" }
pie-bootstrap = { path = "../bootstrap" }
# Shared tarpc control-plane contract.
pie-controller-rpc = { path = "../interface/controller" }
# Gateway data-plane RPC contract (post-inversion M3): GatewayInbound +
# WorkerControl traits + the shared spawn_twoway link glue. The worker dials
# INTO the gateway and serves WorkerControl over the split connection.
pie-worker-rpc = { path = "../interface/worker" }

# Direct dep so this crate's build script receives `DEP_PIE_DRIVER_ABI_INCLUDE`
# (the C header dir) from pie-driver-abi's `links` build-script handoff.
pie-driver-abi = { path = "../interface/driver" }
# Shared id atoms (WorkerId / NodeId / ReqId / SessionId) and the client wire
# vocabulary (ClientMessage / ServerMessage) the gateway data plane carries.
pie-ids = { path = "../interface/ids" }
pie-client-api = { path = "../interface/client" }
anyhow = "1.0"
rmp-serde = "1.3"
# Verify content-addressed blob fetches (design §9): blake3(body) == BlobRef.hash.
blake3 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tokio = { version = "1.52", features = ["full"] }
# `serde-transport-bincode` = control-plane codec (pie-controller-rpc client). The
# data-plane codec is single-sourced in `pie-worker-rpc` (`dispatch_codec`,
# MessagePack), so no `serde-transport-json` here.
tarpc = { version = "0.35", features = [
	"serde-transport",
	"serde-transport-bincode",
	"tcp",
	"unix",
] }
# The WebSocket the standalone client server terminates (client wire vocabulary
# comes from `pie-client`, already a dependency below).
tokio-tungstenite = "0.28.0"
futures = "0.3.31"
mimalloc = "0.1"
tracing = "0.1"
# Async HTTP client for the data-plane blob fetch (gateway_link.rs): the
# worker pulls `GET {origin}/blob/{hash}` for multimodal inputs during
# inference (design §9). Provisioning downloads (weights, py-runtime) live in
# `bin/pie`, so no `blocking` here — blob fetch is async.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Always-linked Rust dummy driver — random tokens, no model load.
pie-driver-dummy = { path = "../driver/dummy" }
pie-weight-loader = { path = "../runtime/weight-loader" }

# Pie websocket client — used by `pie run` to drive an inferlet against
# the engine subprocess we boot. Same crate the dummy_roundtrip example
# uses.
pie-client = { path = "../client/rust" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cmake = "0.1"
