[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pie-bridge"
version = "0.1.0"
description = "PyO3 wrappers over the pie-bridge rkyv wire schema."
requires-python = ">=3.10"
authors = [{ name = "In Gim", email = "in.gim@yale.edu" }]
license = { text = "Apache-2.0" }

[tool.maturin]
features = ["python", "cabi", "ipc"]
python-source = "python"
module-name = "pie_bridge._native"
